2007-05-29  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 04259] long long (Re: road to 0.5.2)
	* Makefile.in, aclocal.m4: move 'gc' from $LIBS to $LIBGC.
	* configure: regenerated.

2007-05-29  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 04256] Re: road to 0.5.2
	* scripts/Makefile.in, scripts/w3mhelp.cgi.in: add datarootdir.

2007-05-28  Hideyuki SHIRAI <shirai@meadowy.org>

	* [w3m-dev 04251] Re: road to 0.5.2
	* po/w3m.pot: pot-update.

2007-05-27  Hiroyuki Ito <ZXB01226@nifty.com>

	* [w3m-dev 04252] Re: road to 0.5.2
	* Makefile.in: add datarootdir for Autoconf 2.60 and later.

2007-05-23  NOKUBI Takatsugu <knok@daionet.gr.jp>

	* [w3m-dev 04155] w3m mingw patch
	* config.h, configure.ac, etc.c, file.c, ftp.c, indep.c, istream.c, 
	  local.c, main.c, rc.c, terms.c, url.c: fix for minpw, except for
	    deleting nsl and dl from configure.ac.
	* configure: regenerated.

2007-05-23  Hiroyuki Ito <ZXB01226@nifty.com>

	* [w3m-dev 04233], [w3m-dev 04236] Re: <del>, <s>, <ins>, and so on
	* file.c, fm.h, po/ja.po, po/w3m.pot, rc.c, table.c:
	    expand display_ins_del to select a type of fontify.

2007-05-23  Hiroyuki Ito <ZXB01226@nifty.com>

	* [w3m-dev 04242] Re: Compile error when --without-ssl
	* aclocal.m4, configure.ac: add checking ssl before digest_auth.
	* configure: regenerated.

2007-05-23  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 04240] nl_langinfo() requires setlocale()
	* fm.h, main.c, menu.c, rc.c: add "#ifdef"s.
	* libwc/charset.c: add setlocale() for nl_langinfo().

2007-05-23  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03923] <pre> in <table>
	* file.c, table.c: avoid extra blanks in pre in table.

2007-05-23  tamo

	* [20070121110209@w3mbbs] unnecessary decoding in linein.c
	* linein.c: decoding URLs in correct condition.

2007-05-23  Tsutomu OKADA

	* [20061228000713@w3mbbs] avoid warning for file.c
	* html.h: change char to unsigned char for HTML_DL_COMPACT(133).
